# jh-trakr

./: .coverage  .gitignore  MANIFEST.in  Makefile  README.md  duplicate-tests  make_show_error  pytest.ini  requirements.txt  setup.cfg  setup.py
jh-trakr/: job_app.py  job_application.py  main.py
jh_trakr/: job_app.py  main.py
notes/: tests-and-fixtures  todo
src/jh_trakr/: __init__.py  job_app.py  main.py
tests/: applied_to_app_test.py  conftest.py  job_app_test.py  main_test.py  new_app_test.py  rejected_from_app_test.py  sanitize_filename_test.py  show_apps_test.py
tests/unit/: applied_to_app_test.py  main_test.py  new_app_test.py  rejected_from_app_test.py  sanitize_filename_test.py  show_apps_test.py
