
[metadata]
name = jh-trakr
version = 0.0.1
url = https://github.com/anakin4747/jh-trakr
author = Anakin Childerhose
author_email = "Anakin Childerhose" <anakin@childerhose.ca>
description = A command line tool for keeping track of job applications
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE
classifiers =
    License :: MIT License


[options]
package_dir =
    =jh_trakr
packages = find:
include_package_data = True
python_requires = >= 3.11
install_requires =
   tabulate>=0.9.0,<2 
   pyfzf>=0.3.1,<2

[options.packages.find]
where = jh_trakr
exclude =
    test*

[options.entry_points]
console_scripts =
    jh-trakr = jh_trakr.main:main

